--- a/concepts/integration-scalability/performance-scalability.mdx
+++ b/concepts/integration-scalability/performance-scalability.mdx
@@ -1,195 +1,204 @@
 ---
-title: "Performance & Scaling Considerations"
-description: "Review strategies for keeping test suites fast and maintainable as they grow, including test parallelization, filtering, and efficient assertion usage. Learn how GoogleTest supports high-performance testing at scale."
+title: "Performance and Scalability Strategies"
+description: "Learn how GoogleTest and GoogleMock efficiently handle large test suites, harnessing features like parallel execution, fine-grained test selection, and container handling. Understand the framework’s design considerations for high-performance and scalable test automation."
 ---
 
-# Performance & Scaling Considerations
+# Performance and Scalability Strategies
 
-As your test suite grows, maintaining speed and clarity becomes crucial. This guide empowers you with practical strategies to keep your tests fast, scalable, and manageable without compromising coverage or reliability. GoogleTest offers features and best practices tailored for high-performance testing at scale.
+GoogleTest and GoogleMock are designed to efficiently handle large and complex C++ test suites, enabling developers to scale their testing efforts without sacrificing speed or reliability. This guide explores key concepts and best practices for optimizing performance and ensuring scalability in automated test execution.
 
 ---
 
-## Test Parallelization
+## Harnessing Parallel Execution for Large Test Suites
 
-Harness the power of parallel execution to drastically reduce total test runtime.
+Testing large codebases requires minimizing runtime without compromising test integrity. GoogleTest harnesses parallel execution by supporting **test sharding** — dividing tests into shards that can run concurrently across multiple processes or machines.
 
-### Why Parallelize?
-Test suites often grow to hundreds or thousands of tests. Running them sequentially may take unacceptably long, impacting development velocity and feedback loops.
+### How Test Sharding Works
 
-### How to Parallelize GoogleTest Suites
-- **Build System Support:** Most modern build tools (e.g., Bazel, CMake with ctest) offer parallel test execution.
-- **Sharding:** GoogleTest supports sharding to split tests across multiple processes. By setting environment variables `GTEST_TOTAL_SHARDS` and `GTEST_SHARD_INDEX`, you can distribute tests across shards.
+- Before test execution, GoogleTest identifies all tests automatically through static registration.
+- The entire test suite is partitioned into shards, each shard responsible for a subset of tests.
+- Environment variables control shard count and shard index, enabling easy parallel execution integration with CI/CD systems or build farms.
 
-  ```bash
-  export GTEST_TOTAL_SHARDS=4
-  export GTEST_SHARD_INDEX=0
-  ./your_test_binary
-  ```
+By parallelizing tests, users reduce wall-clock time significantly, especially beneficial for suites with hundreds or thousands of tests.
 
-- **Thread Safety:** GoogleTest and GoogleMock are thread-safe for typical testing use. Avoid modifying expectations or mocks from multiple threads unless properly synchronized.
+### Using Sharding
 
-### Best Practices
-- Ensure each test is independent with no shared global state to avoid race conditions.
-- Use test fixtures wisely to isolate and encapsulate dependencies.
-
-<Note>
-Running tests in parallel decreases wall time, but be mindful of dependencies and shared resources that could cause flaky or deadlocking tests.
-</Note>
-
-## Test Filtering and Selection
-
-Reduce test execution time by selecting only relevant tests.
-
-### Using Command-Line Filters
-GoogleTest lets you specify subsets of tests with `--gtest_filter`.
-
-- To run tests matching specific patterns:
-  ```bash
-  ./your_test_binary --gtest_filter=MySuite.MyTest
-  ```
-- To run multiple tests or suites:
-  ```bash
-  ./your_test_binary --gtest_filter=MySuite.*:OtherSuite.Test1
-  ```
-- To exclude tests, prefix with `-`:
-  ```bash
-  ./your_test_binary --gtest_filter=-*.FlakyTest
-  ```
-
-### Benefits
-- Run focused tests related to your change.
-- Accelerate iteration and debugging.
-
-<Check>
-Use filters during development to save time, but regularly run full test suites in CI to ensure comprehensive coverage.
-</Check>
-
-## Efficient Assertion Usage
-
-Assertions validate test outcomes but can impact performance if misused.
-
-### Use Lightweight Assertions
-- Prefer `EXPECT_` over `ASSERT_` when possible as `EXPECT_` allows test continuations, reducing overhead.
-- Use simple, direct assertions instead of complex predicates when performance is critical.
-
-### Avoid Redundant Assertions
-- Avoid asserting the same condition multiple times in a single test.
-- Capture and reuse intermediate results for multiple checks if needed.
-
-### Handling Large Data
-- Use matchers like `ElementsAre()` or `UnorderedElementsAre()` to express container assertions concisely.
-- When matching large data sets, consider checking summary properties (like size or key statistics) instead of full content.
-
-<Tip>
-Clear and concise assertions improve test readability and reduce maintenance costs, indirectly affecting performance.
-</Tip>
-
-## Managing Test Suite Growth
-
-Keeping a large test suite maintainable is as important as keeping it fast.
-
-### Organize Tests into Suites
-- Group related tests logically using test suites and fixtures.
-- Leverage `TEST_F` and parameterized tests (`TEST_P`) to reduce code duplication.
-
-### Use Parameterized and Typed Tests
-- Parameterize tests to run the same logic against multiple inputs, minimizing the number of test functions.
-
-### Minimize Fixture Setup Costs
-- Use shared setup for expensive initialization to reduce per-test overhead.
-
-### Regular Cleanup
-- Remove obsolete tests and refactor flaky or redundant tests to keep the suite robust.
-
-<Warning>
-Large, unorganized test suites become a maintenance burden and slow down all development. Regular review is essential.
-</Warning>
-
-## Monitoring and Optimizing Test Performance
-
-Regular analysis helps identify and resolve bottlenecks in your tests.
-
-### Profiling Tests
-- Measure test execution times using built-in GoogleTest flags like `--gtest_print_time`.
-- Use external tools (e.g., profilers or coverage analyzers) to pinpoint slow tests.
-
-### Refactoring Slow Tests
-- Isolate slow tests and analyze causes (e.g., expensive I/O, network calls).
-- Mock or stub out external dependencies.
-- Split long tests into smaller, isolated ones.
-
-### Parallelizing Slow Tests
-- Run expensive tests on dedicated shards.
-- Use resource flags to prevent contention.
-
-### Caching and Fixtures
-- Reuse expensive test fixtures across tests when safe.
-- Cache test results when possible with external tools.
-
-## GoogleTest Support for Scaling
-
-GoogleTest natively supports features to help scale your test suite:
-
-- **Test Filtering:** Allow selective execution.
-- **Sharding:** Divide tests into parallel shards.
-- **Parameterized Tests:** Reduce duplication with `TEST_P` and instantiated suites.
-- **Test Suites and Fixtures:** Organize tests meaningfully.
-- **Setup and Teardown:** Optimize fixture resource management.
-- **Output Formats:** Generate reports for large-scale CI integration (JUnit XML, JSON).
-
-## Practical Example: Parallel Test Execution with Filtering
-
-Consider a large project with hundreds of tests. You want to run only tests related to `Network` and execute them on 4 shards in parallel:
+Set environment variables before running tests:
 
 ```bash
 export GTEST_TOTAL_SHARDS=4
-for i in $(seq 0 3); do
-  export GTEST_SHARD_INDEX=$i
-  ./all_tests --gtest_filter=Network.* &
-end
-done
-wait
+export GTEST_SHARD_INDEX=1  # 0-based index for the current shard
+./your_test_binary
 ```
 
-This executes the relevant tests spread over 4 parallel jobs.
+Each process runs its allotted shard, collectively covering the full test suite.
+
+### Best Practices for Parallel Tests
+
+- Design your tests to be **isolated** and **independent**, avoiding shared state or race conditions.
+- Use fixtures carefully to maintain proper resource management per shard.
+- Avoid global or static mutable state across tests.
+- Ensure resource cleanup after each test to prevent interference.
+
+<Tip>
+Parallel test execution drastically reduces overall test suite runtime but requires tests to be fully independent. Always validate test isolation before enabling sharding.
+</Tip>
 
 ---
 
-## Troubleshooting Common Performance Pitfalls
+## Fine-Grained Test Selection and Filtering
 
-<AccordionGroup title="Troubleshooting Performance Issues">
-<Accordion title="Tests Running Too Slowly">
-Ensure tests avoid heavy disk or network I/O.
-Mock external dependencies where possible.
-Optimize fixture setup to avoid redundant initialization.
-</Accordion>
-<Accordion title="Flaky or Non-Deterministic Tests">
-Run tests sequentially to identify thread-safety issues.
-Use GoogleTest's `--gtest_repeat` to run tests multiple times for reliability.
-Consider isolating flaky tests using filtering.
-</Accordion>
-<Accordion title="Excessive Memory Usage">
-Avoid large data allocations in tests or share fixtures.
-Profile tests for memory leaks with appropriate tools.
-</Accordion>
-</AccordionGroup>
+GoogleTest offers powerful filtering capabilities to selectively run tests, helping focus on relevant subsets during development or CI runs.
+
+### Test Filtering with `--gtest_filter`
+
+Users can specify a pattern that matches test suite and test names to run only desired tests.
+
+Example: Run only tests in the `MathUtils` suite that contain "Prime" in their name:
+
+```bash
+./your_test_binary --gtest_filter=MathUtils.*Prime*
+```
+
+Multiple patterns separated by colons (`:`) allow complex selection, and negative patterns (prefixed by `-`) exclude tests.
+
+### Benefits of Selective Execution
+
+- Speeds up feedback cycles during coding.
+- Enables targeted debugging of failing parts.
+- Reduces resource consumption in CI pipelines when full suite runs are not necessary.
+
+<Note>
+Filtering works on the hierarchical test naming (TestSuite.TestName). Use it strategically in large projects.
+</Note>
+
+---
+
+## Optimizing Matchers and Expectations in GoogleMock
+
+Large-scale mock-based tests can become bottlenecks if matchers and expectations are not managed efficiently.
+
+### Lightweight Matchers
+
+- Utilize simple matchers (like `_` for any argument) when appropriate to reduce overhead.
+- Combine matchers only when necessary to express expected behavior clearly.
+
+### Minimize Over-Specification
+
+- Overly strict expectations cause failures on non-critical changes and increase verification workload.
+- Use `ON_CALL` for default behaviors and `EXPECT_CALL` sparingly only when verifying critical interactions.
+
+### Managing Mock Strictness
+
+- For large test suites, use `NiceMock` to suppress spurious warnings from uninteresting calls, reducing noisy output and performance impact.
+- Reserve `StrictMock` for tests where strict interaction verification is essential.
+
+### Delegating to Real or Fake Objects
+
+- To optimize performance, delegate mock method implementations to existing fakes or real objects for default behaviors, limiting the complexity of mock logic.
+
+---
+
+## Handling Container Types with Matchers
+
+Tests commonly pass containers (e.g., STL vectors, maps) to mocks. GoogleMock provides specialized container matchers optimized for performance and clarity.
+
+### Containers and Matchers
+
+- Use `ElementsAre()` and `UnorderedElementsAre()` for element-wise matching.
+- Use `ElementsAreArray()` when working with arrays.
+- Leverage matchers like `Pair()` for key-value pair validation in associative containers.
+
+<Info>
+Using container matchers can save both development time and execution time by reducing manual iteration and element validation.
+</Info>
+
+---
+
+## Effective Use of Sequences and Call Ordering
+
+While not directly related to raw performance, controlling call order improves test maintainability and clarity, especially in large suites where partial or total order of mock invocations matter.
+
+- Use `InSequence` for strict call order.
+- Use `Sequence` objects for specifying partial orders.
+- Retire expectations with `.RetiresOnSaturation()` to avoid sticky expectations that may degrade performance.
+
+Managing expectation lifecycles prevents expensive verifications on inactive expectations and limits runtime overhead in large test runs.
+
+---
+
+## Thread Safety and Concurrent Mock Usage
+
+GoogleMock is thread-safe and supports concurrent use of mocks, a critical feature for modern multi-threaded applications.
+
+### Guidelines for Threaded Tests
+
+- Set up mocks and expectations before spawning threads.
+- Access mock objects concurrently in multiple threads during exercise phases.
+- Avoid modifying expectations concurrently to prevent undefined behaviors.
+
+### Stress Testing in Multithreaded Environments
+
+GoogleMock's tests demonstrate its ability to handle multiple threads executing mock methods concurrently, with no data races or crashes.
+
+---
+
+## Managing Large Mock Classes to Improve Compilation Time
+
+Large mock classes with many distinct mocked methods can slow down compilation significantly.
+
+### Best Practice
+
+- Move mock class constructors and destructors to `.cc` files to avoid multiple compiler instantiations.
+
+Example:
+
+**Header (`mock_foo.h`):**
+```cpp
+class MockFoo : public Foo {
+ public:
+  MockFoo();
+  virtual ~MockFoo();
+
+  MOCK_METHOD(int, DoThis, (), (override));
+  MOCK_METHOD(bool, DoThat, (const char* str), (override));
+  // ... many more methods ...
+};
+```
+
+**Source (`mock_foo.cc`):**
+```cpp
+#include "mock_foo.h"
+MockFoo::MockFoo() {}
+MockFoo::~MockFoo() {}
+```
+
+This technique reduces compile times across multiple translation units.
 
 ---
 
 ## Summary
 
-Keeping a large GoogleTest-based test suite fast and maintainable requires leveraging parallel execution, effective filtering, efficient assertions, and ongoing performance monitoring. By organizing tests smartly and using GoogleTest's scaling features, you can ensure quick feedback and robust testing.
+GoogleTest and GoogleMock empower users to efficiently run and scale large C++ test suites by:
+
+- Enabling parallel test execution through sharding.
+- Providing flexible filtering for targeted test execution.
+- Optimizing matcher and expectation use for performance.
+- Supporting container matchers and call ordering semantics.
+- Ensuring thread-safe mock usage in concurrent environments.
+- Advising compilation optimization for large mock classes.
+
+Adopting these strategies will help you maintain fast, reliable, and scalable test automation.
 
 ---
 
-## References
+## References and Next Steps
 
-- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md) - Basics of writing and running tests.
-- [Test Discovery & Execution Lifecycle](https://github.com/google/googletest/blob/main/concepts/core-architecture/test-discovery-lifecycle.mdx) - How tests run under the hood.
-- [Guides on Performance and Scalability Best Practices](https://github.com/google/googletest/blob/main/guides/real-world-guidance/performance-best-practices.mdx) - In-depth workflows for big test suites.
-- [Parameterized and Typed Testing Guide](https://github.com/google/googletest/blob/main/guides/advanced-testing-patterns/parameterized-type-tests.mdx) - For efficient test reuse.
-- [GoogleMock Cookbook](https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md) - Useful for mocking expensive dependencies to speed up tests.
+- [Test Execution Configuration and Sharding (Test Output and Configuration)](/api-reference/core-testing-apis/test-output-and-configuration)
+- [Mocking Reference (Mock Creation and Expectations)](/api-reference/advanced-mocking-apis/mock-creation-and-basics)
+- [Actions and Expectations Guide](guides/mocking-with-gmock/actions-and-expectations)
+- [Mocking with GoogleMock Best Practices](guides/mocking-with-gmock/best-mocking-practices)
+- [GoogleTest Primer](docs/primer.md)
+- [gMock Cookbook](docs/gmock_cook_book.md)
 
----
-
-For further help, consult the [GoogleTest Getting Started](https://github.com/google/googletest/tree/main/getting-started) and [GoogleMock Advanced Testing Patterns](https://github.com/google/googletest/tree/main/guides/advanced-testing-patterns) guides for integrating scalability strategies into your workflows.
+For practical implementation, explore the integration guides on build systems and related performance optimization strategies.
