--- a/changelog/migrations-breaking-changes/breaking-changes.mdx
+++ b/changelog/migrations-breaking-changes/breaking-changes.mdx
@@ -1,170 +1,169 @@
 ---
-title: "Breaking Changes & Migration Guide"
-description: "Documents any release that introduces breaking changes, explains the impact, and guides users on migrating their code. Highlights language standard updates, API removals, and major dependency shifts."
+title: "Breaking Changes Overview"
+description: "Highlights breaking changes per release, including new compiler or language requirements (such as the C++17 requirement), replaced or removed interfaces, and changes in expected test behaviors. Users can quickly scan for disruptions and required code updates."
 ---
 
-# Breaking Changes & Migration Guide
+# Breaking Changes Overview
 
-This guide focuses specifically on releases of GoogleTest and GoogleMock that introduce breaking changes—modifications that can affect existing test code, usage of mocks, or integration setups. It not only documents what has changed but also guides you on understanding the impact and migrating your test suites and mocks smoothly.
+This page highlights critical breaking changes introduced in various GoogleTest releases, focusing specifically on aspects that impact users' test code and build configurations. It details updates such as new compiler requirements, removed or replaced interfaces, and alterations in test behavior expectations. Designed to help developers quickly identify disruptions and required code updates, this overview ensures smoother migration between versions.
 
 ---
 
 ## Understanding Breaking Changes
 
-Breaking changes are updates that modify the behavior, interfaces, or dependencies of GoogleTest and GoogleMock in ways that require users to adjust their test code. These can include:
+When updating GoogleTest, it is vital to be aware of any changes that might interrupt your existing tests or build environments. This page provides a curated list of such changes per release, enabling you to anticipate and address compatibility issues efficiently.
 
-- Changes to supported C++ standards or compiler requirements.
-- Removal or deprecation of APIs, macros, or language features.
-- Alterations in default mock behaviors or expectations.
-- Updates to dependencies that cause incompatibilities.
+### What Is a Breaking Change?
 
-Being aware of breaking changes helps maintain your test code's compatibility and take advantage of new language features or improvements safely.
+A breaking change is any modification in GoogleTest that renders previously valid test code or configurations invalid or behaviors different. Common examples include:
 
+- Raising the minimum C++ standard requirements (e.g., moving to C++17).
+- Removing, renaming, or replacing public API interfaces.
+- Altering test assertion semantics or output formats.
+- Changing expected behaviors in test execution or failure handling.
 
-## Types of Breaking Changes Documented Here
+### Why Does Awareness Matter?
 
-### Language Standard Requirements
+Being informed about breaking changes helps you:
 
-- GoogleTest and GoogleMock now require a minimum of **C++17**. Attempting to build or use them with older standards will result in compilation errors.
-- All supported compilers must fully support C++17 features to work with the latest releases.
-
-### API and Macro Changes
-
-- The legacy `MOCK_METHODn` macros have been superseded by the unified `MOCK_METHOD` macro with enhanced capabilities.
-- Macros like `MOCK_CONST_METHODn` and the specialized `MOCK_METHODn_WITH_CALLTYPE` have been replaced by the newer format using qualifiers such as `(const)` and `Calltype()`.
-- If you used the old macros, you must migrate to the new style:
-
-```cpp
-// Old style
-MOCK_CONST_METHOD1(Foo, int(int));
-
-// New style
-MOCK_METHOD(int, Foo, (int), (const));
-```
-
-- Overloaded and templated method mocking syntax has been unified under `MOCK_METHOD` but careful attention to qualifiers and overloads may be required.
+- Plan upgrades with minimal disruption.
+- Update test code to comply with new requirements.
+- Avoid subtle bugs caused by altered test semantics.
+- Leverage newly introduced features or policies effectively.
 
 ---
 
-### Mocking Behavior Changes
+## Key Breaking Changes by Version
 
-- By default, mock objects are **naggy** (warn on uninteresting calls). However, a future release plans to flip this to **nice** by default, suppressing warnings on uninteresting calls. Prepare to explicitly use `NaggyMock` or `NiceMock` if you depend on this behavior.
-- The way expectations (`EXPECT_CALL`) override older ones has been clarified and reinforced: newer expectations take precedence, so order matters more than before.
-- The `RetiresOnSaturation()` clause behavior is formalized: expectations with bounded cardinality may retire after saturation to allow fallback matching.
-- When mocking methods with move-only types (e.g., `std::unique_ptr`), the newer releases offer solid support. Older workaround patterns involving forwarding methods may be deprecated; consider updating mocks accordingly.
+> *Note:* The exact list of breaking changes and their descriptions are typically detailed here per release, including migration guidance and code samples. Please refer to official release notes for precise information.
+
+### Example: C++17 Standard Requirement
+
+Starting from version 1.17.0, GoogleTest requires a minimum of **C++17** support from your compiler. This means:
+
+- Your build system must be configured to enable C++17 or later.
+- Older compilers lacking C++17 support are no longer compatible.
+
+**Migration Tips:**
+
+```cmake
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+```
+
+Ensure your build scripts reflect this change to prevent compilation errors.
+
+### Interface Removals or Replacements
+
+With some updates, certain public APIs or macros may be deprecated or removed.
+
+- Identify usages of removed interfaces in your tests.
+- Review the recommended replacements or alternatives.
+- Refactor your code accordingly to align with the latest API.
+
+### Changes in Expected Test Behaviors
+
+Some releases may alter how test assertions behave or how failures are reported.
+
+- This might affect your test outcomes or failure handling logic.
+- Re-execute your test suite after upgrades to detect any discrepancies.
+- Adjust assertions or test logic if necessary.
 
 ---
 
-### Dependency and Build System Changes
+## How to Use This Page
 
-- Minimum required dependencies have been updated (e.g. Abseil versions), which may impact your build system or linkage.
-- Support for certain platforms or compilers have been dropped; verify your environment complies with the updated compatibility matrix.
-
----
-
-## Migration Strategies
-
-### General Recommendations
-
-- **Review your `MOCK_METHOD` usage:** Ensure you use the new macro format with appropriate qualifiers. See the [Mocking Reference](../reference/mocking.md) for exact syntax.
-- **Adjust expectations order:** Place more general `EXPECT_CALL` statements earlier and specific ones later.
-- **Handle uninteresting calls explicitly:** If your tests rely on warnings about uninteresting calls, migrate to using `NaggyMock` or explicitly add catch-all `EXPECT_CALL` with `Times(AnyNumber())`.
-- **Update move-only mocks:** Refactor mocks that used legacy patterns for move-only arguments to the new direct mocking support.
-
-### Example Migration of Mock Method Macros
-
-Old:
-```cpp
-MOCK_CONST_METHOD1(GetValue, int(int key));
-```
-New:
-```cpp
-MOCK_METHOD(int, GetValue, (int key), (const));
-```
-
-Old:
-```cpp
-MOCK_METHOD1_WITH_CALLTYPE(STDMETHODCALLTYPE, DoStuff, bool(int flags));
-```
-New:
-```cpp
-MOCK_METHOD(bool, DoStuff, (int flags), (Calltype(STDMETHODCALLTYPE)));
-```
-
-### Handling Expectations Order
-
-```cpp
-using ::testing::_;
-using ::testing::Return;
-
-EXPECT_CALL(mock, Foo( _ ))          // general catch-all.
-    .Times(AnyNumber())
-    .WillRepeatedly(Return(false));
-EXPECT_CALL(mock, Foo(5))             // more specific
-    .Times(1)
-    .WillOnce(Return(true));
-```
-
-In this setup, the call `Foo(5)` will match the second expectation due to reverse order precedence.
-
-### Using NiceMock and StrictMock Explicitly
-
-```cpp
-using ::testing::NiceMock;
-using ::testing::StrictMock;
-
-NiceMock<MyMock> nice_mock;      // suppress warnings on uninteresting calls
-StrictMock<MyMock> strict_mock;  // fail on uninteresting calls
-```
-
-Use these wrappers to control mock strictness explicitly as needed.
-
----
-
-## Common Pitfalls
-
-- Forgetting to add `(override)` or `(const, override)` qualifiers to `MOCK_METHOD` causes compilation errors or incorrect behavior.
-- Misordering expectations leads to unexpected matches or failures; always structure `EXPECT_CALL`s with the general cases first, more specific later.
-- Using deprecated `MOCK_METHODn` macros may cause breaks. Migrate all to `MOCK_METHOD`.
-- Unintended uninteresting calls generate warnings or errors; manage these with explicit expectations or switch mock strictness.
-
----
-
-## Troubleshooting
-
-- Use `--gmock_verbose=info` to get detailed output about mock calls and matching expectations.
-- Compile with `-Wall` and address warnings about mismatched qualifiers or deprecated macro usage.
-- Consult the [Mocking Reference](../reference/mocking.md) and [gMock Cookbook](../gmock_cook_book.md) for examples and migration patterns.
+- **Quick Scan:** Look up your current GoogleTest version and target version to identify relevant breaking changes.
+- **Migration Guidance:** Follow provided instructions to adapt your code and build setup.
+- **Code Examples:** Refer to snippets illustrating necessary changes.
+- **Testing:** After applying updates, run your tests thoroughly to confirm expected behavior.
 
 ---
 
 ## Additional Resources
 
-- [Mocking Reference](../reference/mocking.md): detailed macro and class documentation.
-- [gMock for Dummies](../gmock_for_dummies.md): beginner-friendly usage guide.
-- [gMock Cookbook](../gmock_cook_book.md): recipes and advanced topics.
-- [Expectations and Strictness Controls](../api-reference/mocking-api/strictness-controls.mdx)
+For comprehensive details, further reading, and step-by-step migration instructions, consult the following documentation:
+
+- [Migration and Upgrade Guides](/changelog/migrations-breaking-changes/migration-guides)
+- [Latest Release Highlights](/changelog/version-history/changelog-latest)
+- [Assertions Reference](/reference/assertions.md)
+- [Supported Platforms](/docs/platforms.md)
+- [GoogleTest Primer](https://google.github.io/googletest/primer.html)
+
+<Callout type="info">
+Always verify the compatibility of your compiler and tooling with the minimum requirements stated in the breaking changes before upgrading.
+</Callout>
+
+---
+
+## Troubleshooting Common Migration Issues
+
+Here are practical tips for common challenges:
+
+- **Compiler Errors Due to C++ Standard Mismatch:**
+  - Ensure your compiler flag explicitly enables at least C++17.
+
+- **Undefined Macros or Methods:**
+  - Check if APIs have been removed and replace them with supported alternatives.
+
+- **Test Failures Due to Behavioral Changes:**
+  - Review test assertions around those features and update expectations accordingly.
+
+- **Deprecation Warnings:**
+  - Treat warnings seriously; deprecated features usually signal upcoming removals.
+
+---
 
 ## Summary
 
-By aligning your code with the new requirements and conventions outlined in this guide, you will smoothly migrate to the latest GoogleTest and GoogleMock versions, benefiting from modern C++ features, improved maintainability, and enhanced mock behaviors.
+Staying aware of breaking changes is essential for maintaining compatibility and test reliability when upgrading GoogleTest. This overview equips you to manage disruptions proactively and benefit from advancements in the framework.
 
 ---
 
-For further detailed version-by-version changelogs and migration steps, see the [Release Notes & Version History](../release-notes-history/latest-release) and [Step-by-Step Upgrade Guide](../upgrade-support/upgrade-guide).
+<Steps>
+<Step title="Check Your Current Version">
+Identify your GoogleTest version before upgrading to know which breaking changes apply.
+</Step>
+<Step title="Review Breaking Changes">
+Use this page and official release notes to find all breaking changes relevant to your upgrade path.
+</Step>
+<Step title="Plan Your Migration">
+Adjust compiler settings, update test code, and handle API changes based on the provided guidance.
+</Step>
+<Step title="Test Thoroughly">
+Run your full test suite after migration to ensure stability and correctness.
+</Step>
+</Steps>
+
+<Tip>
+If uncertain about how a breaking change affects your test cases, seek community support or check the GoogleTest issue tracker for similar migration experiences.
+</Tip>
 
 ---
 
-### Example Migration Checklist
+## Related Documentation
 
-1. Ensure your build environment uses **C++17 or later**.
-2. Replace all legacy `MOCK_METHODn` macros with `MOCK_METHOD`.
-3. Add required qualifiers `(const)`, `(override)`, `(noexcept)`, or `Calltype(...)`.
-4. Reorder expectations to place specific matchers after general ones.
-5. Use `NiceMock` or `StrictMock` wrappers explicitly when needed.
-6. Validate tests using verbose logging to catch unexpected calls.
-7. Adjust for any API removals or dependency updates.
+Explore these related topics for a deeper understanding:
+
+- [GoogleTest Primer](https://google.github.io/googletest/primer.html): Getting started guide.
+- [Assertions Reference](/reference/assertions.md): Detailed info on assertions.
+- [Migration and Upgrade Guides](/changelog/migrations-breaking-changes/migration-guides): Step-by-step migration help.
+- [Supported Platforms](/docs/platforms.md): Check your platform's compatibility.
+- [Advanced Testing Patterns - Death Tests](/guides/advanced-testing-patterns/death-tests.mdx): For tests that check for process termination.
 
 ---
 
-You are now ready to tackle any breaking changes introduced in recent releases. Happy testing!
+## Version History and Further Details
+
+For exhaustive change logs, release notes, and minor fixes impacting your upgrade, review the full [Version History](/changelog/version-history/changelog-history).
+
+---
+
+## Contribution and Community
+
+GoogleTest benefits from community contributions and discussions. If you encounter a breaking change that causes issues, consider visiting the [GoogleTest GitHub repository](https://github.com/google/googletest) to check for updates or raise concerns.
+
+---
+
+<Source url="https://github.com/google/googletest" paths={[{"path": "docs/changelog/migrations-breaking-changes/breaking-changes.md", "range": "1-100"}]} />
+
